# Deus_crud_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
app/routers/: health.py  items.py
ci/: buildspec-test.yml  buildspec.yml
infra/: .terraform.lock.hcl  alb.tf  cicd.tf  ecr.tf  ecs.tf  iam.tf  network.tf  outputs.tf  providers.tf  security.tf  terraform.tfvars.example  variables.tf
scripts/: bootstrap_image.sh  smoke_test.sh
tests/: conftest.py  test_health.py  test_items.py  test_root.py
