[project]
name = "python-crud-cloud"
version = "0.1.0"
description = "Minimal production-ready CRUD REST API (FastAPI) deployed to AWS via CI/CD."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI relies on function calls (Depends/Query/...) as argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__init__.py"]

[tool.coverage.report]
show_missing = true
